# rust-youtube-rss-cached

./: .gitignore  Cargo.toml
data/src/: template.xml
src/: capnp.rs  main.rs  rss_capnp.rs
