[package]
name = "youtube-rss-cached"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "youtube"
path = "src/main.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quick-xml = "0.26.0"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
rayon = "1.5.1"
md5 = "0.7.0"