[package]
name = "youtube-rss-cached"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "youtube-json"
path = "src/json.rs"


[[bin]]
name = "youtube-capnp"
path = "src/capnp.rs"

[dependencies]
quick-xml = "0.26.0"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
rayon = "1.5.1"
md5 = "0.7.0"
capnp = "0.15.1"